<resources>
    <string name="app_name">Junior Robo</string>
    <string name="terms_privacy">I agree <a href="https://jrrobo.com/Home/PrivacyPolicy">Terms and conditions</a> and <a href="https://jrrobo.com/Home/PrivacyPolicy">Privacy policy</a></string>

    <!--Text field hints strings-->
    <string name="phone_number_hint">000 0000 000</string>
    <string name="star">*</string>
    <string name="ask_question_here">Ask question here</string>
    <string name="question_description_optional">Question description (Optional)</string>
    <string name="question_tag">Question TAG</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email">Email</string>
    <string name="grade">Grade</string>
    <string name="city">City</string>
    <string name="type_your_answer_here">Type your answer here</string>
    <!--Text field hints strings ends here-->

    <!--Text views strings-->
    <string name="login">Login</string>
    <string name="opt_verification">OTP Verification</string>
    <string name="otp_sent_to_mobile">Enter 4 digit OTP sent to</string>
    <string name="otp_resend">Didn\'t receive OTP?</string>
    <string name="otp_will_be_sent">One Time Password(OTP) will be sent to the entered mobile number for verification</string>
    <string name="select_question_tag">Select question tag</string>
    <string name="otp_successful">OTP Verified Successfully</string>
    <string name="you_can_use_to_ask_question">You can use following:</string>
    <string name="register_as">Register as:</string>
    <string name="guest_user">Guest user</string>
    <string name="question_picture">Question Pic</string>
    <string name="question_file">Question File</string>
    <string name="question">Question:</string>
    <string name="description">Description:</string>
    <!--Text views strings ends here-->

    <!--Button strings-->
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="request_otp">REQUEST OTP</string>
    <string name="country_code">+91 IN</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="post_question">POST QUESTION</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="attach_file">ATTACH FILE</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="answer_this">ADD ANSWER</string>
    <string name="add_answer">Add Solution</string>
    <string name="post_answer">POST Solution</string>
    <string name="see_solution">See Solution</string>
    <!--Button strings ends here-->

    <!--Radio button strings-->
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <!--Radio button strings ends here-->

    <!--Floating Action Button strings-->
    <string name="ask_question">ASK QUESTION</string>
    <!--Floating Action Button strings ends here-->

    <!--On boarding strings-->
    <!--Screen 1-->
    <string name="tactical_learning">A Tactical Learning\nplatform</string>
    <string name="creative_lessons_best_price">Best and Creative lessons at\nLowest price Guaranteed</string>
    <string name="unique_platform">Junior Robo is a Unique Platform for the kids to help them boost\ntheir IQ and EQ with the help of Coding.</string>
    <string name="trustpilot_review">Trustpilot Score</string>
    <!--Screen 2-->
    <string name="screen_2">Give your child wings to innovate</string>
    <!--Screen 3-->
    <string name="screen_3">Activity based core subjects learning</string>
    <!--Screen 4-->
    <string name="screen_4">From Spending to Saving, Let Your Child Learn Financial Literacy to Understand Money</string>
    <!--Screen 5-->
    <string name="screen_5">Make music and dancing your daily habit\nwith our quick learn courses</string>
    <!--Screen 6-->
    <string name="screen_6">Medical Literacy course for your child to explore it further at early stage</string>
    <!--On boarding strings ends-->

    <!--bottom navigation titles-->
    <string name="questions_answers">Q and A</string>
    <string name="live_classes">Live Classes</string>
    <string name="profile">Profile</string>
    <string name="dummy">Dummy Menu</string>
    <!--bottom navigation titles ends here-->

    <!--chip text strings-->
    <string name="all_questions">All</string>
    <string name="maths_questions">Maths</string>
    <string name="olympiad_questions">Olympiad</string>
    <string name="category">Category</string>
    <string name="subject">Subject:</string>
    <string name="question_mark">Question Mark</string>
    <string name="question_image">Question Image</string>
    <string name="image">Image:</string>
    <string name="love_learning_amp_creating"><![CDATA[Integrating Knowledge!]]></string>
    <string name="add_solution">Add Solution</string>
    <string name="log_out">Log Out</string>
    <string name="offers">Answer &amp; Earn</string>
    <string name="noDataAvailable">No answers available! \n Be the first one to answer</string>
    <string name="coding_course">Coding Course</string>
    <string name="cbse_olympiads_course">cbse/olympiads Course</string>
    <string name="music_dancing_course"><![CDATA[MUSIC & DANCING COURSE]]></string>
    <string name="medical_literacy_course">Medical Literacy Course</string>
    <string name="answer_amp_earn"><![CDATA[Answer & Earn]]></string>
    <string name="popular_ncourses">Popular Courses</string>
    <string name="the_best_platform_for_online_learning">The Best Platform For Online Learning</string>
    <string name="start_learning">Start Learning</string>
    <string name="about">About</string>
    <string name="subjects_covered">Subjects Covered:</string>
    <string name="online_live_class">Online \nLive Class</string>
    <string name="monthly_ptm">Monthly \nPTM</string>
    <string name="lifetime_recording">Lifetime \nRecording</string>
    <string name="classroom_ntest">Classroom\nTest</string>
    <string name="enrol_now_4">Enrol Now ₹4000/Month</string>
    <string name="this_course_includes">This Course Includes</string>
    <string name="course_highlights">Course Highlights</string>
    <string name="monthly_nfee">Monthly \nFee</string>
    <string name="book_demo">Book Demo</string>
    <string name="student_name">Student Name</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="others">Others</string>
    <string name="course">Course</string>
    <string name="services_update"><![CDATA[Get Educational & Services update from \nJunior Robo]]></string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number">+91-9310125170</string>
    <string name="contact_mail">care@jrrobo.com</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="parent_s_name">Parent\'s Name</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="new_user">New User? Create An Account</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="doubts">Doubts</string>
    <string name="answers">Solution</string>
    <string name="subjects_selected">Subjects Selected:</string>
    <string name="batch">Batch</string>
    <string name="_1_1">1:1</string>
    <string name="select_subjects">Select Subjects</string>
    <string name="course_curriculum">Course Curriculum</string>
    <string name="enter_hours">Enter Hours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="financial_literacy_course">financial literacy course</string>
    <string name="skip">Skip</string>
    <string name="tour">Tour</string>
    <string name="classroom">Classroom</string>
    <string name="live">live</string>
    <string name="recorded">recorded</string>
    <!--chip text strings ends here-->

</resources>