<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_clear_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_white"
            android:background="@color/pink_700"
            app:shapeAppearanceOverlay="@style/circularImageShapeOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sign_in_text"
            style="@style/TextAppearance.MdcTypographyStyles.Headline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="35sp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sign_in_with_email"
            android:textStyle="bold"
            android:textColor="@color/pink_700"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_email"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_text"
            app:startIconDrawable="@drawable/ic_mail_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_edit_text_email"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/pink_700"
                android:shadowColor="@color/pink_700"
                android:inputType="textEmailAddress"
                tools:targetApi="p" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_password"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_email"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/pink_700"
                android:shadowColor="@color/pink_700"
                android:inputType="textPassword"
                tools:targetApi="p" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_number"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            android:hint="@string/mobile_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_password"
            app:startIconDrawable="@drawable/ic_phone_black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_number"
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/pink_700"
                android:shadowColor="@color/pink_700"
                android:inputType="number"
                tools:targetApi="p" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_in_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"
            android:text="@string/login"
            android:layout_margin="16dp"
            android:padding="10dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_in_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/register"
            android:visibility="gone"
            android:layout_margin="16dp"
            android:padding="10dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/new_user_text"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/sign_in_login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="visible"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>