<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.OtpVerificationFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/app_logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView6"
        style="@style/TextAppearance.MdcTypographyStyles.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/opt_verification"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView7"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/otp_sent_to_mobile"
        app:layout_constraintStart_toStartOf="@+id/materialTextView6"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_mobile_number"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/materialTextView7"
        app:layout_constraintStart_toEndOf="@+id/materialTextView7"
        app:layout_constraintTop_toTopOf="@+id/materialTextView7"
        tools:text="+91 1234567890" />

    <LinearLayout
        android:id="@+id/root_otp_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView7">

        <EditText
            android:id="@+id/otp_edit_box1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/phone_number_layout"
            android:gravity="center"
            android:hint="@string/star"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp_edit_box2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/phone_number_layout"
            android:gravity="center"
            android:hint="@string/star"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp_edit_box3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/phone_number_layout"
            android:gravity="center"
            android:hint="@string/star"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp_edit_box4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/phone_number_layout"
            android:gravity="center"
            android:hint="@string/star"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/otp_verification_timeout"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/otp_resend"
        app:layout_constraintEnd_toEndOf="@+id/root_otp_layout"
        app:layout_constraintStart_toStartOf="@+id/root_otp_layout"
        app:layout_constraintTop_toBottomOf="@+id/root_otp_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_resend_otp"
        style="@style/Widget.App.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:textColor="@color/pink_700"
        android:text="@string/resend_otp"
        app:layout_constraintEnd_toEndOf="@+id/otp_verification_timeout"
        app:layout_constraintStart_toStartOf="@+id/otp_verification_timeout"
        app:layout_constraintTop_toBottomOf="@+id/otp_verification_timeout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_verify_otp"
        style="@style/Widget.App.Button"
        app:backgroundTint="@color/pink_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_resend_otp" />

</androidx.constraintlayout.widget.ConstraintLayout>