<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.onboarding.screens.FirstScreen">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_logo_image"
        android:elevation="10dp"
        android:layout_marginTop="30dp"
        app:shapeAppearanceOverlay="@style/circularImageShapeOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/TextAppearance.MdcTypographyStyles.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/love_learning_amp_creating"
        android:textColor="@color/pink_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gifImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/running_robot"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@+id/materialTextView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/creative_lessons_best_price"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/trustpilot_review"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
        app:layout_constraintStart_toStartOf="@+id/materialTextView3"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="226dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/trustpilot_review"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
        app:layout_constraintStart_toStartOf="@+id/materialTextView5"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

</androidx.constraintlayout.widget.ConstraintLayout>